# TinyVoice

./: .gitignore  README.md  edge-tts.js  main.js  package-lock.json  package.json  pdf-parser.js  preload.js  tts-server.py
src/: app.js  book-manager.js  index.html  player.js  styles.css  tauri-api.js  tts-engine.js
src-tauri/: Cargo.toml  edge-tts.spec  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: epub.rs  lib.rs  pdf.rs
