[package]
name = "tinyvoice"
version = "1.0.0"
description = "TinyVoice - 智能语音朗读器"
authors = ["TinyVoice"]
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tokio = { version = "1", features = ["process", "rt"] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
zip = "2"
flate2 = "1"
uuid = { version = "1", features = ["v4"] }
